--- a/yinfu.html
+++ b/yinfu.html
@@ -1,3 +1,4 @@
+<script src="https://cdn.jsdelivr.net/gh/mocchen/cssmeihua/js/yinghua.js"></script>/* 页面樱花效果 */
 <script>
 (function () {
     var colors = ["#D61C59", "#E7D84B", "#1B8798"];
